--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "dark-mode-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.5.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "name": "dark-mode-nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@zeit/next-sass": "^1.0.1",
+        "next": "9.5.5",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "sass": "^1.27.0",
+        "scss": "^0.2.4",
+        "use-dark-mode": "^2.3.1"
+    }
 }
